fixed overlapping issue with unsplash controls

--- a/static/css/sass.css
+++ b/static/css/sass.css
@@ -1956,20 +1956,25 @@ input[type=range].MASAS-slider {
   .footer--wrapper .unsplash-controls {
     display: none;
     justify-content: space-between;
-    position: absolute;
     bottom: 100%;
-    left: 0;
-    right: 0;
-    padding: 1rem 1.7rem; }
+    height: 0;
+    position: relative; }
     .footer--wrapper .unsplash-controls .artist-controls {
       display: flex;
-      align-items: center; }
+      align-items: center;
+      position: absolute;
+      top: 0;
+      left: 0; }
+    .footer--wrapper .unsplash-controls .background-controls {
+      position: absolute;
+      top: 0;
+      right: 0; }
     .footer--wrapper .unsplash-controls a {
       text-transform: uppercase;
       font-family: Lato-Semibold;
-      font-size: 0.6rem;
-      letter-spacing: 0.2rem;
-      opacity: 0.5;
+      font-size: .6rem;
+      letter-spacing: .2rem;
+      opacity: .5;
       cursor: pointer;
       margin-right: 1rem; }
     .footer--wrapper .unsplash-controls a:hover {
@@ -3733,7 +3738,8 @@ input[type=range].MASAS-slider {
         min-height: 5rem;
         display: flex;
         justify-content: center;
-        align-items: center; }
+        align-items: center;
+        width: 100%; }
     @media screen and (min-width: 992px) {
       .likes-scroll--wrapper .likes--wrapper .likes-artworks--wrapper {
         flex-direction: row;
