--- a/static/sass/Footer/UnsplashControls.sass
+++ b/static/sass/Footer/UnsplashControls.sass
@@ -1,15 +1,25 @@
 .unsplash-controls
 	display: none
 	justify-content: space-between
-	position: absolute
+	// position: absolute
 	bottom: 100%
-	left: 0
-	right: 0
-	padding: 1rem 1.7rem
+	// left: 0
+	// right: 0
+	// padding: 1rem 1.7rem
+	height: 0
+	position: relative
 
 	.artist-controls
 		display: flex
 		align-items: center
+		position: absolute
+		top: 0
+		left: 0
+
+	.background-controls
+		position: absolute
+		top: 0
+		right: 0
 
 	a
 		text-transform: uppercase
