--- a/static/sass/Likes/LikesArtworks.sass
+++ b/static/sass/Likes/LikesArtworks.sass
@@ -14,6 +14,7 @@
 		display: flex
 		justify-content: center
 		align-items: center
+		width: 100%
 
 
 @media screen and (min-width: $desktop-min-width)
